--- a/src/templates/dashboard/estudiante.html
+++ b/src/templates/dashboard/estudiante.html
@@ -65,7 +65,7 @@
                     <div class="course-content">
                         <div class="course-header-row">
                             <h4 class="course-title">{{ curso.nombre }}</h4>
-                            <span class="time-badge">En curso</span>
+                            <span class="time-badge">{{ curso.estado_ui|default:"En curso" }}</span>
                         </div>
                         <p class="instructor-name">{{ curso.polo }} - Comisión #{{ curso.comision }}</p>
                         
@@ -79,11 +79,17 @@
                             </div>
                             <div class="course-meta">
                                 <span><i class="fa-regular fa-file-alt"></i> {{ curso.total_clases }} clases</span>
-                                <span><i class="fa-regular fa-calendar"></i> Próxima: {% if curso.proxima_fecha %}{{ curso.proxima_fecha|date:"d/m/Y" }}{% else %}{{ curso.horarios|default:"Por definir" }}{% endif %}</span>
+                                <span><i class="fa-regular fa-calendar"></i>
+                                    {% if curso.estado_ui == 'Por iniciar' %}
+                                        Inicio: {% if curso.proxima_fecha %}{{ curso.proxima_fecha|date:"d/m/Y" }}{% else %}{{ curso.horarios|default:"Por definir" }}{% endif %}
+                                    {% else %}
+                                        Próxima: {% if curso.proxima_fecha %}{{ curso.proxima_fecha|date:"d/m/Y" }}{% else %}{{ curso.horarios|default:"Por definir" }}{% endif %}
+                                    {% endif %}
+                                </span>
                             </div>
                         </div>
                         
-                        <a href="{% url 'cursos:mis_inscripciones' %}" class="btn-continue">
+                        <a href="{% url 'usuario:mi_progreso' %}" class="btn-continue">
                             <i class="fa-solid fa-play-circle"></i> Continuar curso
                         </a>
                     </div>
