--- a/src/templates/administracion/estadisticas.html
+++ b/src/templates/administracion/estadisticas.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="page-hero__actions">
-            <a href="{% url 'administracion:exportar_estadisticas_estudiantes_curso' %}" class="action-btn">
+            <a href="{% url 'administracion:exportar_estadisticas_estudiantes_curso' %}" class="action-btn" target="_blank">
                 <i class="fa-solid fa-file-excel"></i>
                 Exportar
             </a>
